--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
+title: 섭사장의 블로그
 email: your-email@example.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  블로그의 description
+  _config.yml에서 수정할 수 있습니다.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://jisup.github.com" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: # empty now
+github_username:  jisup
 
 # Build settings
 markdown: kramdown
