--- a/_config.yml
+++ b/_config.yml
@@ -1,42 +1,28 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: 섭사장의 블로그
-email: your-email@example.com
-description: > # this means to ignore newlines until "baseurl:"
-  블로그의 description
-  _config.yml에서 수정할 수 있습니다.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://jisup.github.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: # empty now
-github_username:  jisup
+description: 섭사장의 RoR 까먹기 방지용 블로그입니다.
 
-# Build settings
+url: http://jisup.github.io
+baseurl: ""
+paginate_path: "blog/page:num/"
+permalink: blog/:title/
+
 markdown: kramdown
-theme: minima
-plugins:
-  - jekyll-feed
+highlighter: rouge
+gems: [jekyll-paginate]
+paginate: 5
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+navigation:
+ - title: Home
+   url: /index.html
+ - title: About
+   url: /about
+ - title: Contact
+   url: /contact
+
+social:
+   github: jisup
+   twitter: 
+   facebook: jisup_lee
+   email: lee@oecenter.org
+
+google_analytics: "UA-106476938-1"
