--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ navigation:
 social:
    github: jisup
    twitter: 
-   facebook: jisup_lee
+   facebook: jisup.lee 
    email: lee@oecenter.org
 
 google_analytics: "UA-106476938-1"
