--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: 섭사장의 블로그
 description: 섭사장의 스타트업, 기획, 개발, 마케팅 블로그입니다.
 
-url: https://jisup.github.io
+url: https://jeesub.github.io
 baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
@@ -22,9 +22,9 @@ navigation:
    url: /contact
 
 social:
-   github: jisup
+   github: jeesub
    twitter:
-   facebook: jisup.lee
+   facebook: jeesub.brad.lee
    email: lee@oecenter.org
 
 google_analytics: "UA-106476938-1"
