--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ social:
    github: jeesub
    twitter:
    facebook: jeesub.brad.lee
-   email: lee@oeclab.com
+   email: blindschokolade@gmail.com
 
 google_analytics: "UA-106476938-1"
 timezone: Asia/Seoul
